parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> cars
Rule 1     cars -> CARS_O car_list CARS_C
Rule 2     car_list -> car car_list
Rule 3     car_list -> <empty>
Rule 4     car -> CAR_O id brand model year license_plate available rental_price transmission services CAR_C
Rule 5     id -> ID_O ID ID_C
Rule 6     brand -> BRAND_O TEXT BRAND_C
Rule 7     model -> MODEL_O TEXT MODEL_C
Rule 8     year -> YEAR_O YEAR YEAR_C
Rule 9     license_plate -> LICENSE_PLATE_O LICENSE_PLATE LICENSE_PLATE_C
Rule 10    available -> AVAILABLE_O AVAILABLE AVAILABLE_C
Rule 11    rental_price -> RENTAL_PRICE_O RENTAL_PRICE RENTAL_PRICE_C
Rule 12    transmission -> TRANSMISSION_O TRANSMISSION TRANSMISSION_C
Rule 13    services -> SERVICES_O service_list SERVICES_C
Rule 14    service_list -> service service_list
Rule 15    service_list -> <empty>
Rule 16    service -> SERVICE_O date description SERVICE_C
Rule 17    date -> DATE_O DATE DATE_C
Rule 18    description -> DESCRIPTION_O TEXT DESCRIPTION_C

Terminals, with rules where they appear

AVAILABLE            : 10
AVAILABLE_C          : 10
AVAILABLE_O          : 10
BRAND_C              : 6
BRAND_O              : 6
CARS_C               : 1
CARS_O               : 1
CAR_C                : 4
CAR_O                : 4
DATE                 : 17
DATE_C               : 17
DATE_O               : 17
DESCRIPTION_C        : 18
DESCRIPTION_O        : 18
ID                   : 5
ID_C                 : 5
ID_O                 : 5
LICENSE_PLATE        : 9
LICENSE_PLATE_C      : 9
LICENSE_PLATE_O      : 9
MODEL_C              : 7
MODEL_O              : 7
RENTAL_PRICE         : 11
RENTAL_PRICE_C       : 11
RENTAL_PRICE_O       : 11
SERVICES_C           : 13
SERVICES_O           : 13
SERVICE_C            : 16
SERVICE_O            : 16
TEXT                 : 6 7 18
TRANSMISSION         : 12
TRANSMISSION_C       : 12
TRANSMISSION_O       : 12
YEAR                 : 8
YEAR_C               : 8
YEAR_O               : 8
error                : 

Nonterminals, with rules where they appear

available            : 4
brand                : 4
car                  : 2
car_list             : 1 2
cars                 : 0
date                 : 16
description          : 16
id                   : 4
license_plate        : 4
model                : 4
rental_price         : 4
service              : 14
service_list         : 13 14
services             : 4
transmission         : 4
year                 : 4

Parsing method: LALR

state 0

    (0) S' -> . cars
    (1) cars -> . CARS_O car_list CARS_C

    CARS_O          shift and go to state 2

    cars                           shift and go to state 1

state 1

    (0) S' -> cars .



state 2

    (1) cars -> CARS_O . car_list CARS_C
    (2) car_list -> . car car_list
    (3) car_list -> .
    (4) car -> . CAR_O id brand model year license_plate available rental_price transmission services CAR_C

    CARS_C          reduce using rule 3 (car_list -> .)
    CAR_O           shift and go to state 5

    car_list                       shift and go to state 3
    car                            shift and go to state 4

state 3

    (1) cars -> CARS_O car_list . CARS_C

    CARS_C          shift and go to state 6


state 4

    (2) car_list -> car . car_list
    (2) car_list -> . car car_list
    (3) car_list -> .
    (4) car -> . CAR_O id brand model year license_plate available rental_price transmission services CAR_C

    CARS_C          reduce using rule 3 (car_list -> .)
    CAR_O           shift and go to state 5

    car                            shift and go to state 4
    car_list                       shift and go to state 7

state 5

    (4) car -> CAR_O . id brand model year license_plate available rental_price transmission services CAR_C
    (5) id -> . ID_O ID ID_C

    ID_O            shift and go to state 9

    id                             shift and go to state 8

state 6

    (1) cars -> CARS_O car_list CARS_C .

    $end            reduce using rule 1 (cars -> CARS_O car_list CARS_C .)


state 7

    (2) car_list -> car car_list .

    CARS_C          reduce using rule 2 (car_list -> car car_list .)


state 8

    (4) car -> CAR_O id . brand model year license_plate available rental_price transmission services CAR_C
    (6) brand -> . BRAND_O TEXT BRAND_C

    BRAND_O         shift and go to state 11

    brand                          shift and go to state 10

state 9

    (5) id -> ID_O . ID ID_C

    ID              shift and go to state 12


state 10

    (4) car -> CAR_O id brand . model year license_plate available rental_price transmission services CAR_C
    (7) model -> . MODEL_O TEXT MODEL_C

    MODEL_O         shift and go to state 14

    model                          shift and go to state 13

state 11

    (6) brand -> BRAND_O . TEXT BRAND_C

    TEXT            shift and go to state 15


state 12

    (5) id -> ID_O ID . ID_C

    ID_C            shift and go to state 16


state 13

    (4) car -> CAR_O id brand model . year license_plate available rental_price transmission services CAR_C
    (8) year -> . YEAR_O YEAR YEAR_C

    YEAR_O          shift and go to state 18

    year                           shift and go to state 17

state 14

    (7) model -> MODEL_O . TEXT MODEL_C

    TEXT            shift and go to state 19


state 15

    (6) brand -> BRAND_O TEXT . BRAND_C

    BRAND_C         shift and go to state 20


state 16

    (5) id -> ID_O ID ID_C .

    BRAND_O         reduce using rule 5 (id -> ID_O ID ID_C .)


state 17

    (4) car -> CAR_O id brand model year . license_plate available rental_price transmission services CAR_C
    (9) license_plate -> . LICENSE_PLATE_O LICENSE_PLATE LICENSE_PLATE_C

    LICENSE_PLATE_O shift and go to state 22

    license_plate                  shift and go to state 21

state 18

    (8) year -> YEAR_O . YEAR YEAR_C

    YEAR            shift and go to state 23


state 19

    (7) model -> MODEL_O TEXT . MODEL_C

    MODEL_C         shift and go to state 24


state 20

    (6) brand -> BRAND_O TEXT BRAND_C .

    MODEL_O         reduce using rule 6 (brand -> BRAND_O TEXT BRAND_C .)


state 21

    (4) car -> CAR_O id brand model year license_plate . available rental_price transmission services CAR_C
    (10) available -> . AVAILABLE_O AVAILABLE AVAILABLE_C

    AVAILABLE_O     shift and go to state 26

    available                      shift and go to state 25

state 22

    (9) license_plate -> LICENSE_PLATE_O . LICENSE_PLATE LICENSE_PLATE_C

    LICENSE_PLATE   shift and go to state 27


state 23

    (8) year -> YEAR_O YEAR . YEAR_C

    YEAR_C          shift and go to state 28


state 24

    (7) model -> MODEL_O TEXT MODEL_C .

    YEAR_O          reduce using rule 7 (model -> MODEL_O TEXT MODEL_C .)


state 25

    (4) car -> CAR_O id brand model year license_plate available . rental_price transmission services CAR_C
    (11) rental_price -> . RENTAL_PRICE_O RENTAL_PRICE RENTAL_PRICE_C

    RENTAL_PRICE_O  shift and go to state 30

    rental_price                   shift and go to state 29

state 26

    (10) available -> AVAILABLE_O . AVAILABLE AVAILABLE_C

    AVAILABLE       shift and go to state 31


state 27

    (9) license_plate -> LICENSE_PLATE_O LICENSE_PLATE . LICENSE_PLATE_C

    LICENSE_PLATE_C shift and go to state 32


state 28

    (8) year -> YEAR_O YEAR YEAR_C .

    LICENSE_PLATE_O reduce using rule 8 (year -> YEAR_O YEAR YEAR_C .)


state 29

    (4) car -> CAR_O id brand model year license_plate available rental_price . transmission services CAR_C
    (12) transmission -> . TRANSMISSION_O TRANSMISSION TRANSMISSION_C

    TRANSMISSION_O  shift and go to state 34

    transmission                   shift and go to state 33

state 30

    (11) rental_price -> RENTAL_PRICE_O . RENTAL_PRICE RENTAL_PRICE_C

    RENTAL_PRICE    shift and go to state 35


state 31

    (10) available -> AVAILABLE_O AVAILABLE . AVAILABLE_C

    AVAILABLE_C     shift and go to state 36


state 32

    (9) license_plate -> LICENSE_PLATE_O LICENSE_PLATE LICENSE_PLATE_C .

    AVAILABLE_O     reduce using rule 9 (license_plate -> LICENSE_PLATE_O LICENSE_PLATE LICENSE_PLATE_C .)


state 33

    (4) car -> CAR_O id brand model year license_plate available rental_price transmission . services CAR_C
    (13) services -> . SERVICES_O service_list SERVICES_C

    SERVICES_O      shift and go to state 38

    services                       shift and go to state 37

state 34

    (12) transmission -> TRANSMISSION_O . TRANSMISSION TRANSMISSION_C

    TRANSMISSION    shift and go to state 39


state 35

    (11) rental_price -> RENTAL_PRICE_O RENTAL_PRICE . RENTAL_PRICE_C

    RENTAL_PRICE_C  shift and go to state 40


state 36

    (10) available -> AVAILABLE_O AVAILABLE AVAILABLE_C .

    RENTAL_PRICE_O  reduce using rule 10 (available -> AVAILABLE_O AVAILABLE AVAILABLE_C .)


state 37

    (4) car -> CAR_O id brand model year license_plate available rental_price transmission services . CAR_C

    CAR_C           shift and go to state 41


state 38

    (13) services -> SERVICES_O . service_list SERVICES_C
    (14) service_list -> . service service_list
    (15) service_list -> .
    (16) service -> . SERVICE_O date description SERVICE_C

    SERVICES_C      reduce using rule 15 (service_list -> .)
    SERVICE_O       shift and go to state 44

    service_list                   shift and go to state 42
    service                        shift and go to state 43

state 39

    (12) transmission -> TRANSMISSION_O TRANSMISSION . TRANSMISSION_C

    TRANSMISSION_C  shift and go to state 45


state 40

    (11) rental_price -> RENTAL_PRICE_O RENTAL_PRICE RENTAL_PRICE_C .

    TRANSMISSION_O  reduce using rule 11 (rental_price -> RENTAL_PRICE_O RENTAL_PRICE RENTAL_PRICE_C .)


state 41

    (4) car -> CAR_O id brand model year license_plate available rental_price transmission services CAR_C .

    CAR_O           reduce using rule 4 (car -> CAR_O id brand model year license_plate available rental_price transmission services CAR_C .)
    CARS_C          reduce using rule 4 (car -> CAR_O id brand model year license_plate available rental_price transmission services CAR_C .)


state 42

    (13) services -> SERVICES_O service_list . SERVICES_C

    SERVICES_C      shift and go to state 46


state 43

    (14) service_list -> service . service_list
    (14) service_list -> . service service_list
    (15) service_list -> .
    (16) service -> . SERVICE_O date description SERVICE_C

    SERVICES_C      reduce using rule 15 (service_list -> .)
    SERVICE_O       shift and go to state 44

    service                        shift and go to state 43
    service_list                   shift and go to state 47

state 44

    (16) service -> SERVICE_O . date description SERVICE_C
    (17) date -> . DATE_O DATE DATE_C

    DATE_O          shift and go to state 49

    date                           shift and go to state 48

state 45

    (12) transmission -> TRANSMISSION_O TRANSMISSION TRANSMISSION_C .

    SERVICES_O      reduce using rule 12 (transmission -> TRANSMISSION_O TRANSMISSION TRANSMISSION_C .)


state 46

    (13) services -> SERVICES_O service_list SERVICES_C .

    CAR_C           reduce using rule 13 (services -> SERVICES_O service_list SERVICES_C .)


state 47

    (14) service_list -> service service_list .

    SERVICES_C      reduce using rule 14 (service_list -> service service_list .)


state 48

    (16) service -> SERVICE_O date . description SERVICE_C
    (18) description -> . DESCRIPTION_O TEXT DESCRIPTION_C

    DESCRIPTION_O   shift and go to state 51

    description                    shift and go to state 50

state 49

    (17) date -> DATE_O . DATE DATE_C

    DATE            shift and go to state 52


state 50

    (16) service -> SERVICE_O date description . SERVICE_C

    SERVICE_C       shift and go to state 53


state 51

    (18) description -> DESCRIPTION_O . TEXT DESCRIPTION_C

    TEXT            shift and go to state 54


state 52

    (17) date -> DATE_O DATE . DATE_C

    DATE_C          shift and go to state 55


state 53

    (16) service -> SERVICE_O date description SERVICE_C .

    SERVICE_O       reduce using rule 16 (service -> SERVICE_O date description SERVICE_C .)
    SERVICES_C      reduce using rule 16 (service -> SERVICE_O date description SERVICE_C .)


state 54

    (18) description -> DESCRIPTION_O TEXT . DESCRIPTION_C

    DESCRIPTION_C   shift and go to state 56


state 55

    (17) date -> DATE_O DATE DATE_C .

    DESCRIPTION_O   reduce using rule 17 (date -> DATE_O DATE DATE_C .)


state 56

    (18) description -> DESCRIPTION_O TEXT DESCRIPTION_C .

    SERVICE_C       reduce using rule 18 (description -> DESCRIPTION_O TEXT DESCRIPTION_C .)

